@@ -1,4 +1,14 @@
-### Fix github action (HEAD -> main)
+### Fix github ci (HEAD -> main)
+>Mon, 16 Jan 2023 02:52:50 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix github action (origin/main, origin/HEAD)
 >Mon, 16 Jan 2023 02:36:35 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Fix github ci (origin/main, origin/HEAD)
+### Fix github ci
 >Mon, 16 Jan 2023 02:25:19 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
